@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4UserPhysicsListMessenger.hh,v 1.8 2001-07-11 10:08:32 gunter Exp $
+// $Id: G4UserPhysicsListMessenger.hh,v 1.9 2001-08-03 05:59:03 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -46,6 +46,7 @@
 //    storePhysicsTable * store physics table into files
 //    retreivePhysicsTable * retreive physics table from files
 //    setStoredInAscii * Switch on/off ascii mode in store/retreive Physics Table
+//    SetApplyCuts *  Set flag for ApplyCuts 
 // ------------------------------------------------------------
 //	History
 //        first version                   09 Jan. 1998 by H.Kurashige 
@@ -53,6 +54,7 @@
 //        add buildPhysicsTable command   13 Apr. 1999 by H.Kurashige
 //        add store/retreivePhysicsTable  08 Nov. 2000 by H.Kurashige
 //        add setStoredInAscii command    12 Mar. 2001 by H.Kurashige
+//        add SetApplyCuts command         2 Aug. 2001 by H.Kurashige
 // ------------------------------------------------------------
 
 #ifndef G4UserPhysicsListMessenger_h
@@ -98,6 +100,7 @@ public: // with description
     G4UIcmdWithAString *        storeCmd;
     G4UIcmdWithAString *        retrieveCmd;
     G4UIcmdWithAnInteger *      asciiCmd;
+    G4UIcommand          *      applyCutsCmd;
 };
 
 #endif
