@@ -1,4 +1,4 @@
-$Id: History,v 1.34 2001-07-19 00:25:21 asaim Exp $
+$Id: History,v 1.35 2001-08-03 05:59:01 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Aug 02, 2001
+- Add Set/GetApplyCuts methods in G4VUserPhysicsList (Hisaya)
+- Add /run/particle/SetApplyCuts command in G4UserPhysicsListMessenger (Hisaya)
 
 Jul 18, 2001, M.Asai (run-V03-02-01)
 - Add a new feature for the user to increase the number of waiting stacks
